--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "vis-network": "^9.1.9",
-    "react-graph-vis": "^1.0.7",
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
@@ -18,7 +16,10 @@
     "framer-motion": "^10.16.4",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-graph-vis": "^1.0.7",
+    "react-icons": "^5.2.1",
+    "vis-network": "^9.1.9"
   },
   "engines": {
     "node": ">=18"
